# area-files

./: .gitignore  .gitmodules  LICENSE  README.md
client-core/area_files_client_core/: Cargo.toml
client-core/area_files_client_core/config/: config.json
client-core/area_files_client_core/src/: config.rs  data.rs  handler.rs  lib.rs  main.rs
client/AreaFilesClient/: build.gradle.kts  gradle.properties  settings.gradle.kts
client/AreaFilesClient/android/: build.gradle.kts
client/AreaFilesClient/android/src/main/: AndroidManifest.xml
client/AreaFilesClient/common/: build.gradle.kts
client/AreaFilesClient/common/src/androidMain/: AndroidManifest.xml
client/AreaFilesClient/desktop/: build.gradle.kts
common/area_files_lib/: Cargo.toml
common/area_files_lib/src/: file_mgr.rs  lib.rs  protocol.rs  server.rs  token_mgr.rs  user.rs  util.rs
docs/: UI.psd  architecture_design.md  configure_operation_maintenance.md  detail_design.md  domain_model.md  initiation_report.md  requirements_analysis.md  system_safety_analysis.md  team_report.md  test_and_quality_assurance.md
experiment/: makefile
experiment/client/source/: client.c
experiment/common/include/: debug.h  downloadInfo.h  fileList.h  shareData.h  stack_int.h  strUtil.h  thread_pool.h  util.h
experiment/common/source/: fileList.c  stack_int.c  strUtil.c  thread_pool.c  util.c
experiment/server/source/: server.c
server/area_files_server/: Cargo.toml
server/area_files_server/config/: config.json
server/area_files_server/src/: config.rs  lib.rs  main.rs
(+10 files in other folders)
